--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.6.0",
+    "@stripe/stripe-js": "^8.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "react": "^19.2.0",
     "react-calendly": "^4.4.0",
     "react-dom": "^19.2.0",
-    "resend": "^6.9.1"
+    "resend": "^6.9.1",
+    "stripe": "^20.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
